--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Marina Abreu<br />
 									Studio de Tatuagem</h1>
-									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. Meu atendimento é com hora marcada
+									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, você poderá conhecer melhor o meu trabalho de Ilustradora de peles. Meu atendimento é com hora marcada
 									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
@@ -42,40 +42,42 @@
 								</div>
 							</section>
 
+							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">Florais</h2>
+									<p>Nos últimos três anos, o tema floral vem crescendo exponencialmente. Além disso, segundo o Google Trends, o número de pesquisas sobre esse tema foi o maior na categoria tatuagem, com destaque por tatuagem de girassol e peônias.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic03_.jpg" alt="" />
+								</div>
+							</section>
+
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<h2 class="major">Mini realismo</h2>
+									<p>Tatuagem em Mini realismo ou Micro realismo tem crescido no Brasil, com forte influência de artistas de fora, este estilo é constituido por detalhes pequeninos, e desafiadores. Gosto muito de executar esse tipo de trabalho.</p>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/pic04_.jpg" alt="" />
+								</div>
+							</section>
+
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Certificações</h2>
 									<p>Estou sempre em busca do próximo nível na tattoo. Participo constantemente de workshops e cursos para minha especialização.</p>
 								</div>
-								<div class="inner">
-									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Qualidade</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
-									</ul>
-								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight large left">
-								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
-								</div>
-								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
-								</div>
-							</section>
+							
 
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Ilustrações</h2>
+									<p>Confira algumas de minhas ilustrações em pele! Todas as artes são únicas personalizadas e feitas com muito ♡.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
@@ -97,8 +99,9 @@
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
-									<h2 class="major">Contact</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<h2 class="major">Contato</h2>
+									
+									<p>Av. Monte Castelo,603-Centro,Santa Bárbara d'Oeste-SP,13450-031-mpcanoabreu@gmail.com</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
