finalizando informações iniciais

--- a/index.html
+++ b/index.html
@@ -99,45 +99,21 @@
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
-									<h2 class="major">Contato</h2>
-									
-									<p>Av. Monte Castelo,603-Centro,Santa Bárbara d'Oeste-SP,13450-031-mpcanoabreu@gmail.com</p>
+									<h2 class="major">Rota no Maps</h2>
+									<p><a href="https://www.google.com/maps/dir//Av.+Monte+Castelo,+603+-+Centro,+Santa+B%C3%A1rbara+d'Oeste+-+SP,+13450-031/@-22.7547709,-47.4249321,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94c89dbbb8521019:0x2dba7568462cf6df!2m2!1d-47.4228283!2d-22.7547357" target="_blank"> Av. Monte Castelo,603-Centro,Santa Bárbara d'Oeste-SP,13450-031</a></p>
 								</div>
 								<div class="inner columns divided">
-									<div class="span-3-25">
-										<form method="post" action="#">
-											<div class="fields">
-												<div class="field half">
-													<label for="name">Name</label>
-													<input type="text" name="name" id="name" />
-												</div>
-												<div class="field half">
-													<label for="email">Email</label>
-													<input type="email" name="email" id="email" />
-												</div>
-												<div class="field">
-													<label for="message">Message</label>
-													<textarea name="message" id="message" rows="4"></textarea>
-												</div>
-											</div>
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="button primary" /></li>
-											</ul>
-										</form>
-									</div>
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
-											<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-											<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-											<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+											<li class="icon brands fa-whatsapp"><a href="https://wa.me/5519998235889" target="_blank">(19)99823-5889</a></li>
+											<li class="icon brands fa-facebook-f"><a href="https://web.facebook.com/marina.canodeabreu" target="_blank">marina.canodeabreu</a></li>
+											<li class="icon brands fa-instagram"><a href="https://www.instagram.com/maritattoo.art/" target="_blank">@maritattoo.art</a></li>
 										</ul>
 									</div>
 								</div>
 							</section>
 
-						<!-- Panel -->
+						<!-- Panel --> <!--
 							<section class="panel color2-alt">
 								<div class="intro color2">
 									<h2 class="major">Elements</h2>
@@ -406,8 +382,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								</div>
 							</section>
 
-						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+						--> <!-- Copyright -->
+							<div class="copyright">&copy; Marina Abreu - Tattoo Art. Design: <a href="http://atriostech.com.br">Atriostech</a>.</div>
 
 					</div>
 
