--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/01_.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03_.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 									<div class="group span-4-5">
