--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Marina Abreu<br />
+									<h1 class="major">Marina Abreu |<br />
 									Studio de Tatuagem</h1>
 									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, você poderá conhecer melhor o meu trabalho de Ilustradora de peles. Meu atendimento é com hora marcada
 									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> :)</p>
@@ -85,10 +85,10 @@
 										<a href="images/gallery/fulls/02_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02_.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/03_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03_.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/04_.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04_.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/05_.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06_.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
@@ -100,7 +100,7 @@
 							<section class="panel color4-alt">
 								<div class="intro color4">
 									<h2 class="major">Rota no Maps</h2>
-									<p><a href="https://www.google.com/maps/dir//Av.+Monte+Castelo,+603+-+Centro,+Santa+B%C3%A1rbara+d'Oeste+-+SP,+13450-031/@-22.7547709,-47.4249321,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94c89dbbb8521019:0x2dba7568462cf6df!2m2!1d-47.4228283!2d-22.7547357" target="_blank"> Av. Monte Castelo,603-Centro,Santa Bárbara d'Oeste-SP,13450-031</a></p>
+									<p><a href="https://www.google.com/maps/dir//Av.+Monte+Castelo,+603+-+Centro,+Santa+B%C3%A1rbara+d'Oeste+-+SP,+13450-031/@-22.7547709,-47.4249321,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94c89dbbb8521019:0x2dba7568462cf6df!2m2!1d-47.4228283!2d-22.7547357" target="_blank"> Av. Monte Castelo, 603-Centro, Santa Bárbara d'Oeste-SP, 13450-031</a> Cherry cabeleireiros</p>
 								</div>
 								<div class="inner columns divided">
 									<div class="span-1-5">
