--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
 									<div class="group span-4-5">
 										<a href="images/gallery/fulls/05_.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05_.jpg" alt="" /></a>
 										<a href="images/gallery/fulls/06_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08_.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08_.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<div class="group span-3">
+										<a href="images/gallery/fulls/10_.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/10_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/11_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/11_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/12_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/12_.jpg" alt="" /></a>
+									</div>
+									<a href="images/gallery/fulls/09_.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09_.jpg" alt="" /></a>
 								</div>
 							</section>
 
