--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<title>Marina Abreu - Tattoo Art</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Marina Abreu | Tatuadora | SBO | +55 (19) 99823-5889">
+		<meta name="keywords" content="Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada">
+		<meta name="author" content="Marina Abreu">
+		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
