--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Marina Abreu |<br />
 									Studio de Tatuagem</h1>
-									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. Meu atendimento é com hora marcada
+									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. O atendimento é com hora marcada
 									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
