reduzindo tamanho da imagem floral página inicial

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<p>Nos últimos três anos, o tema floral vem crescendo exponencialmente. Além disso, segundo o Google Trends, o número de pesquisas sobre esse tema foi o maior na categoria tatuagem, com destaque por tatuagem de girassol e peônias.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03_.jpg" alt="" />
+									<img src="images/floral_tattoo.jpg" alt="" />
 								</div>
 							</section>
 
