reduzindo tamanho da imagem fineline_tattoo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 									<p>Se você gosta de tatuagens minimalistas feitas com linhas finas, com certeza posso te ajudar, essa é minha especialidade. Minha técnica fine line traz ilustrações que dão voz aos seus sentimentos, causas e questões de forma positiva.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02_.jpg" alt="" />
+									<img src="images/fineline_tattoo.jpg" alt="" />
 								</div>
 							</section>
 
