reduzindo imagem mini_realismo_tattoo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<p>Tatuagem em Mini realismo ou Micro realismo tem crescido no Brasil, com forte influência de artistas de fora, este estilo é constituido por detalhes pequeninos, e desafiadores. Gosto muito de executar esse tipo de trabalho.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic04_.jpg" alt="" />
+									<img src="images/mini_realismo_tattoo.jpg" alt="" />
 								</div>
 							</section>
 
