inserindo tag google

--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 	<head>
 		<title>Marina Abreu - Tattoo Art</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="Marina Abreu | Tatuadora | SBO | +55 (19) 99823-5889">
-		<meta name="keywords" content="Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada">
+		<meta name="description" content=" Marina Abreu Tattoo Arts | Tatuadora | SBO | +55 (19) 99823-5889 | marinaabreu.com.br">
+		<meta name="keywords" content=" Marina Abreu, Marina Abreu Tattoo Arts, Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada">
 		<meta name="author" content="Marina Abreu">
 		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11058976939"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'AW-11058976939');
+		</script>
 	</head>
 	<body class="is-preload">
 
@@ -23,7 +32,7 @@
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Marina Abreu |<br />
-									Studio de Tatuagem</h1>
+									Estúdio de Tatuagem</h1>
 									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. O atendimento é com hora marcada
 									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> :)</p>
 									<ul class="actions">
