alterações na tag html: meta

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>Marina Abreu - Tattoo Art</title>
 		<meta charset="utf-8" />
-		<meta name="description" content=" Marina Abreu Tattoo Arts | Tatuadora | SBO | +55 (19) 99823-5889 | marinaabreu.com.br">
-		<meta name="keywords" content=" Marina Abreu, Marina Abreu Tattoo Arts, Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada">
+		<meta name="description" content=" Marina Abreu Tattoo Arts | Tatuadora | Santa Bárbara D'Oeste | São Paulo | +55 (19) 99823-5889 | marinaabreu.com.br">
+		<meta name="keywords" content=" Marina Abreu, Marina Abreu Tattoo Arts, Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada, Santa Bárbara D'Oeste">
 		<meta name="author" content="Marina Abreu">
 		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
