--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11058976939"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CR7903YV54"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'AW-11058976939');
+			gtag('config', 'G-CR7903YV54');
 		</script>
+
 	</head>
 	<body class="is-preload">
 
