atualizando foto da Artista

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01_.jpg" alt="" />
+									<img src="images/marina_abreu.jpg" alt="" />
 								</div>
 							</section>
 
