acesse para fazer seu orçamento  Formulário Google

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Marina Abreu |<br />
+									<h1 class="major">Marina Abreu |<br /> 
 									Estúdio de Tatuagem</h1>
 									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. O atendimento é com hora marcada
-									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> :)</p>
+									em Santa Barbara d'Oeste SP -  Siga-me<a href="https://www.instagram.com/maritattoo.art/" target="_blank"> @maritattoo.art</a> ou  <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6DYyMt4m5lMEWlAvxhMtE8sPtyCLxIIJcpVPlC00SlGaSHQ/viewform" target="_blank"> acesse para fazer seu orçamento.</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
 									</ul>
