mais caracteres na tag html title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Marina Abreu - Tattoo Arts</title>
+		<title>Marina Abreu - Tattoo Arts - Tatuadora, Ilustradora de pele</title>
 		<meta charset="utf-8" />
 		<meta name="description" content=" Marina Abreu Tattoo Arts | Tatuadora | Santa Bárbara D'Oeste | São Paulo | +55 (19) 99823-5889 | marinaabreu.com.br">
 		<meta name="keywords" content=" Marina Abreu, Marina Abreu Tattoo Arts, Tatuadora, Tattoo, Ilustradora de pele, Estúdio Privado, @maritattoo.art, fineline, mini realismo, floral, tattoo delicada, Santa Bárbara D'Oeste">
