atualização de imagens

--- a/index.html
+++ b/index.html
@@ -95,23 +95,29 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="images/gallery/fulls/01_.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/02_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/03_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/01_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/01_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/02_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/02_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/03_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/03_marina_abreu_tattoo.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/04_.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04_.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/04_marina_abreu_tattoo.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04_.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05_.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08_.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/05_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/06_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/07_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/08_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08_marina_abreu_tattoo.jpg" alt="" /></a>
 									</div>
 									<div class="group span-3">
-										<a href="images/gallery/fulls/10_.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/10_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/11_.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/11_.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/12_.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/12_.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/10_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="bottom"><img src="images/gallery/thumbs/10_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/11_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/11_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/12_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/12_marina_abreu_tattoo.jpg" alt="" /></a>
 									</div>
 									<a href="images/gallery/fulls/09_.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09_.jpg" alt="" /></a>
+									<div class="group span-4-5">
+										<a href="images/gallery/fulls/13_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/14_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/15_marina_abreu_tattoo.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07_marina_abreu_tattoo.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/16_marina_abreu_tattoo.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08_marina_abreu_tattoo.jpg" alt="" /></a>
+									</div>
 								</div>
 							</section>
 
