ancora para contato

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									<h1 class="major">Marina Abreu |<br /> 
 									Estúdio de Tatuagem</h1>
 									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. O atendimento é com hora marcada
-									em Santa Barbara d'Oeste SP - <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6DYyMt4m5lMEWlAvxhMtE8sPtyCLxIIJcpVPlC00SlGaSHQ/viewform" target="_blank"> Orçamentos | Agendamentos.</a> :)</p>
+									em Santa Barbara d'Oeste SP - <a href="#contact"> Orçamentos | Agendamentos.</a> :)</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
 									</ul>
@@ -130,7 +130,7 @@
 									<h5>Estúdio Residencial</h5>
 									<p><a href="https://www.google.com.br/maps/dir//R.+Jo%C3%A3o+Rossi,+325+-+Parque+Res.+do+Lago,+Santa+B%C3%A1rbara+d'Oeste+-+SP,+13458-630/@-22.7741006,-47.3931525,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94c89e9f4e6f9133:0x3f2c4fade240a0b7!2m2!1d-47.3909638!2d-22.7741006" target="_blank"> Rua João Rosi, 325-Parque Residencial do Lago, Santa Bárbara d'Oeste-SP, 13458-630</a></p>
 								</div>
-								<div class="inner columns divided">
+								<div class="inner columns divided" id="contact">
 									<div class="span-1-5">
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-whatsapp"><a href="https://wa.me/5519998235889" target="_blank">(19)99823-5889</a></li>
