--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<p>Olá, <strong> sou especialista em</strong> Fineline, Mini Realismo, Delicadas e Florais. Fique à vontade, aqui você poderá conhecer melhor o meu trabalho de Ilustradora de peles. O atendimento é com hora marcada
 									em Santa Barbara d'Oeste SP - <a href="#contact"> Orçamentos | Agendamentos.</a> :)</p>
 									<ul class="actions">
-										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
+										<li><a href="#contact" class="button primary color1 circle icon solid fa-angle-right">Próximo</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
