--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="author" content="Marina Abreu">
 		<meta name="robots" content="index,follow">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="p:domain_verify" content="3b983d64bde2e7a2a05aeae09a4272b2"/>
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<!-- Google tag (gtag.js) -->
@@ -35,6 +36,7 @@
 		<img height="1" width="1" style="display:none;" alt=""
 		src="https://ct.pinterest.com/v3/?event=init&tid=2613505425156&pd[em]=<hashed_email_address>&noscript=1" />
 	</noscript>
+
 	<!-- end Pinterest Tag -->
 
 	</head>
